third_party/WebKit/Source/WebKit2/config.h
@@ -25,6 +25,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  * THE POSSIBILITY OF SUCH DAMAGE.
  */ 
 
+#if defined (BUILDING_GTK__)
+#include "autotoolsconfig.h"
+#endif /* defined (BUILDING_GTK__) */
+
 #ifdef __cplusplus
 
 // These undefs match up with defines in WebKit2Prefix.h for Mac OS X.
@@ -34,10 +38,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <wtf/FastMalloc.h>
 
 #endif
-
-#if defined (BUILDING_GTK__)
-#include <WebCore/config.h>
-#endif /* defined (BUILDING_GTK__) */
 
 #include <wtf/DisallowCType.h>
 #include <wtf/Platform.h>
@@ -62,7 +62,7 @@ static const type& name() \
     return name##Value; \
 }
 
-#if defined(BUILDING_QT__)
+#if defined(BUILDING_QT__) || defined(BUILDING_GTK__)
 
 #define WTF_USE_JSC 1
 #define WTF_USE_V8 0
